# AnalogHub

./: .env.example  .env.prod  Dockerfile  README.md  curl_entrypoint.sh  docker-compose.local.yml  docker-compose.yml  main.py  requirements.txt  worker.py  Таблица замен УТМ.xlsx  аналоги.xlsx
.github/workflows/: analog_workflow.yaml
api/v1/: analogs.py
backend/: Dockerfile  curl_entrypoint.sh  docker-compose.bases.yml  docker-compose.local.yml  main.py  requirements.txt  worker.py
backend/api_auth/: README.md  alembic.ini  docker-compose.local.yml  main.py  pyproject.toml
backend/api_auth/api/v1/: routes.py
backend/api_auth/core/: config.py
backend/api_auth/db/: postgres_db.py  redis_db.py
backend/api_auth/db/ps_schemas/: sheme.py
backend/api_auth/migrations/: env.py
backend/api_auth/migrations/versions/: 91a8628fc014_.py  cfa309a30f46_init.py
backend/api_auth/models/auth_models/: bad_responses.py  token_models.py  users_models.py
backend/api_auth/services/: email_service.py  redis_service.py  sql_service.py  token_service.py  user_service.py
backend/api_auth/utils/: decorators.py  exceptions.py  password.py  token.py
backend/core/: config.py
backend/db/: elastic_db.py
backend/models/: base_model.py  (+1 more)
core/: config.py
file_storage/: dfa9e466-3a45-49cf-bd2f-0f9160e3a66a.xlsx
frontend/: Dockerfile  app.py  docker-compose.yml  manage.py  requirements.txt
models/: base_model.py
services/: analog_service.py  enums.py  file_utils.py  mappings.py  template_service.py  transliterate.py  utils.py
templates/: base.html  index.html
(+53 files in other folders)
